# modelardb-demo

./: .gitmodules  README.md  docker-compose-cluster.yml  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
comparison-system/: Dockerfile  requirements.txt
comparison-system/app/: main.py
data/: nodes.json
data/python/: copy_edge_to_local.py  create_write_read_drop.py  list_tables_and_get_schema.py  query_edge_and_cloud.py
python-scripts/: Dockerfile  requirements.txt
python-scripts/app/: main.py
python-scripts/scripts/: copy_cloud_to_local.py  create_write_read_drop.py  list_tables_and_get_schema.py  query_edge_and_cloud.py  read_time_series_table.py
scripts/: copy_cloud_to_local.py  create_write_read_drop.py  list_tables_and_get_schema.py  query_edge_and_cloud.py
src/: App.tsx  constants.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: nodes.json
src-tauri/src/: lib.rs  main.rs  util.rs
src/components/ClientModal/: ClientModal.tsx
src/components/CompressionRatio/: CompressionRatio.tsx
src/components/Configuration/: Configuration.tsx
src/components/ConfigurationModal/: ConfigurationModal.tsx
src/components/ConfigurationSetting/: ConfigurationSetting.tsx
src/components/DataTransferChart/: DataTransferChart.tsx
src/components/DataTransferStatistics/: DataTransferStatistics.tsx
src/components/IngestionControls/: IngestionControls.tsx
src/components/NodeDetail/: NodeDetail.module.css  NodeDetail.tsx
src/components/NodeDonutChart/: NodeDonutChart.tsx
src/components/NodeGroup/: NodeGroup.tsx
src/components/NodeList/: NodeList.tsx
src/components/NodeMap/: NodeMap.tsx
src/components/NodeMarker/: NodeMarker.tsx
src/components/NodeModal/: NodeModal.tsx
src/components/NodePin/: NodePin.tsx
src/components/QueryBrowser/: QueryBrowser.tsx
src/components/QueryEditor/: QueryEditor.tsx
src/data/: nodes.ts  tables.ts
src/interfaces/: event.ts  node.ts  query.ts  system.ts  table.ts
(+8 files in other folders)
