[package]
name = "modelardb-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "modelardb_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arrow = "54.2.1"
arrow-flight = "54.2.1"
arrow-json = "54.2.1"
datafusion = "46.0.0"
modelardb_embedded = { git = "https://github.com/ModelarData/ModelarDB-RS.git", rev="b9cf479" }
modelardb_types = { git = "https://github.com/ModelarData/ModelarDB-RS.git", rev="b9cf479" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = "1.44.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.31"
