[package]
name = "modelardb-demo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "modelardb_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arrow = "55.0.0"
arrow-flight = "55.0.0"
arrow-json = "55.0.0"
bollard = "0.19.2"
datafusion = "47.0.0"
modelardb_embedded = { git = "https://github.com/ModelarData/ModelarDB-RS.git", rev="45a5f39"}
modelardb_types = { git = "https://github.com/ModelarData/ModelarDB-RS.git", rev="45a5f39" }
object_store = { version = "0.12.0", features = ["aws"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = "1.44.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.31"
url = "2.5.4"
